# devradar

./: CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
devradar/: __init__.py  cli.py  config.py  models.py  scanner.py
devradar/analyzers/: __init__.py  scorer.py  summarizer.py
devradar/output/: __init__.py  markdown.py  terminal.py
devradar/sources/: __init__.py  github.py  hackernews.py  rss.py
tests/: test_main.py
